--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animal Shelter Website Template | WIX</title>
+  <link rel="shortcut icon" href="https://www.wix.com/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <main class="main-container">
+    <header class="header">
+      <div class="sub-box-1">
+        <div class="logo-box">
+          <img src="./images/wix.svg" alt="logo-img" class="logo">
+        </div>
+        <div class="device-box">
+          <div class="desktop-box">
+            <img src="./images/desktop.svg" alt="desktop-img" class="desktop">
+          </div>
+          <hr class="vertical-line">
+          <div class="mobile-box">
+            <img src="./images/mobile.svg" alt="mobile-img" class="mobile-img">
+          </div>
+        </div>
+      </div>
+      <div class="sub-box-2">
+        <p class="edit-description">Click edit and create your own amazing website</p>
+          <a href="#" class="read-more">Read More</a>
+        <a href="https://users.wix.com/signin?originUrl=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&redirectTo=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&overrideLocale=en&forceRender=true" class="edit-btn">Edit this site</a>
+  
+      </div>
+    </header>
+    <nav class="navigation-bar"></nav>
+  </main>
   <script src="./script.js"></script>
 </body>
 </html>
