--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header class="header">
       <div class="sub-box-1">
         <div class="logo-box">
-          <img src="./images/wix.svg" alt="logo-img" class="logo">
+          <a href="https://www.wix.com/" class="logo-link" target="_blank">
+            <img src="./images/wix.svg" alt="logo-img" class="logo">
+          </a>
         </div>
         <div class="device-box">
           <div class="desktop-box">
@@ -21,17 +23,44 @@
           <hr class="vertical-line">
           <div class="mobile-box">
             <img src="./images/mobile.svg" alt="mobile-img" class="mobile-img">
+            <img src="./images/mobile-hover.svg" alt="mobile-on-hover-img" class="mobile-hover-img">
           </div>
         </div>
       </div>
       <div class="sub-box-2">
         <p class="edit-description">Click edit and create your own amazing website</p>
           <a href="#" class="read-more">Read More</a>
-        <a href="https://users.wix.com/signin?originUrl=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&redirectTo=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&overrideLocale=en&forceRender=true" class="edit-btn">Edit this site</a>
+          <a href="https://users.wix.com/signin?originUrl=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&redirectTo=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&overrideLocale=en&forceRender=true" class="edit-btn">Edit this site</a>
   
       </div>
     </header>
-    <nav class="navigation-bar"></nav>
+    <nav class="navigation-bar">
+      <div class="nav-logo">
+        <div class="cat-logo-box">
+          <img src="./images/cat-image.webp" alt="cat-image" class="logo-img">
+        </div>
+        <h2 class="logo-title">
+          Animal Shelter
+        </h2>
+      </div>
+      <div class="nav-menu-option">
+        <a href="#" class="option home-opt">
+          Home
+        </a>
+        <a href="#" class="option">
+          Adoptions
+        </a>
+        <a href="#" class="option">
+          Volunteer
+        </a>
+        <a href="#" class="option">
+          Donate
+        </a>
+        <a href="#" class="option">
+          Contact Us
+        </a>
+      </div>
+    </nav>
   </main>
   <script src="./script.js"></script>
 </body>
