volunteer section half completed

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animal Shelter Website Template | WIX</title>
   <link rel="shortcut icon" href="https://www.wix.com/favicon.ico" type="image/x-icon">
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <!-- cdn link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./style.css">
+  
 </head>
 <body>
-  <main class="main-container">
-    <header class="header">
+  <header class="header">
       <div class="sub-box-1">
         <div class="logo-box">
           <a href="https://www.wix.com/" class="logo-link" target="_blank">
@@ -33,7 +39,8 @@
           <a href="https://users.wix.com/signin?originUrl=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&redirectTo=https:%2F%2Fmanage.wix.com%2Fedit-template%2Ffrom-intro%3ForiginTemplateId%3D12d03eab-6c3c-a1b1-fcc0-19708bb07ecb%26editorSessionId%3D5E4475C0-BE2C-48C8-33B4-E65F232D9F62&overrideLocale=en&forceRender=true" class="edit-btn">Edit this site</a>
   
       </div>
-    </header>
+  </header>
+  <main class="main-container">
     <nav class="navigation-bar">
       <div class="nav-logo">
         <div class="cat-logo-box">
@@ -61,6 +68,95 @@
         </a>
       </div>
     </nav>
+    <section class="save-pet-section">
+      <div class="pet-image-container">
+        <img src="./images/sec-cat1.webp" alt="cat-image" class="cat-img">
+      </div>
+      <div class="donate-container">
+        <div class="dotted-brd"></div>
+        <div class="donate-cnt">
+          <h1 class="pet-title">
+            SAVE A PET​</h1>
+          <h3 class="donate-now">DONATE NOW!​</h3>
+        </div>
+        <div class="bottom-brd">
+          <div class="btm-box1">
+            <div class="btm-brd"></div>
+          </div>
+          <div class="btm-box2">
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+          <div class="btm-box3">
+            <div class="btm-brd"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="volunteer">
+      <div class="volunteer-box1">
+        <div class="volunteer-cnt-box">
+          <div class="volunteer-list-img">
+            <img src="./images/start-18.png" alt="star-img">
+          </div>
+          <div class="volunteer-cnt">
+            <h2 class="volunteer-title">
+              ​VOLUNTEER
+            </h2><br>
+            <p class="volunteer-cnt">
+              I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.<br><br>
+              This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors. Make your company stand out and show your visitors who you are.
+            </p>
+          </div>
+        </div>
+        <div class="volunteer-border"></div>
+        <div class="week-box">
+          <div class="week-box1">
+            <div class="dog-img-box">
+              <img src="./images/dog_of_week.webp" alt="dog-img" class="week-dog">
+            </div>
+            <div class="dog-cnt">
+              <div class="dog-cnt-head-box">
+                <div class="dog-title-star-img">
+                  <img src="./images/start-18.png" alt="stat-list-item-img">
+                </div>
+                <h3 class="dog-cnt-title">Dog of the week
+                </h3>
+              </div>
+              <p class="dog-cnt-box">
+                ​I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.​
+              </p>
+            </div>
+          </div>
+          <div class="week-box2">
+            <div class="cat-img-box">
+              <img src="./images/cat_of_weak.webp" alt="cat-img" class="week-cat">
+            </div>
+            <div class="cat-cnt">
+              <div class="dog-cnt-head-box">
+                <div class="dog-title-star-img">
+                  <img src="./images/start-18.png" alt="stat-list-item-img">
+                </div>
+                <h3 class="dog-cnt-title">Cat of the week
+                </h3>
+              </div>
+              <p class="dog-cnt-box">
+                ​I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.​
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="volunteer-box2"></div>
+    </section>
+    <footer class="footer">
+      <div class="copyright">© 2035 by Animal Shelter.<br> Powered and secured by <a href="https://www.wix.com/?utm_campaign=vir_created_with" class="footer-link" target="_blank">wix</a>
+      </div>
+      <div class="social-media">
+        <p class="twitter"><i class="fa-brands fa-twitter"></i>&nbsp;Follow us on Twitter</p>
+        <p class="facebook"><i class="fa-brands fa-facebook-f"></i>&nbsp;Follow us on facebook</p>
+        <p class="u-tube"><i class="fa-brands fa-youtube"></i>&nbsp;Watch adoptable animals on YouTube</p>
+      </div>
+    </footer>
   </main>
   <script src="./script.js"></script>
 </body>
