updates in html and css

--- a/index.html
+++ b/index.html
@@ -146,7 +146,90 @@
           </div>
         </div>
       </div>
-      <div class="volunteer-box2"></div>
+      <div class="volunteer-box2">
+        <div class="img-box1">
+          <div class="img-slider-container">
+            <div class="dog-img-box1">
+              <img src="./images/dog-pscroll1.png" alt="dog1" class="dog-img-1">
+            </div>
+            <div class="dog-img-box1">
+              <img src="./images/dog-pscroll2.png" alt="dog2" class="dog-img-2">
+            </div>
+          </div>
+          <h3 class="adoptable-pet">
+            <div class="star-img">
+              <img src="./images/start-18.png" alt="star-img">
+            </div>
+            Adoptable dogs
+          </h3>
+        </div>
+        <div class="img-box2">
+          <div class="img-slider-container">
+            <div class="dog-img-box1">
+              <img src="./images/cat-pscroll-1.png" alt="cat1" class="dog-img-1">
+            </div>
+            <div class="dog-img-box1">
+              <img src="./images/cat-pscroll2.png" alt="cat2" class="cat-img-2">
+            </div>
+          </div>
+          <h3 class="adoptable-pet">
+            <div class="star-img">
+              <img src="./images/start-18.png" alt="star-img">
+            </div>
+            Adoptable cats
+          </h3>
+        </div>
+      </div>
+      <div class="volunteer-box3">
+        <div class="ticket-box">
+          <div class="ticket-img-box">
+            <img src="./images/ticket-img.webp" alt="ticket" class="ticket-img">
+          </div>
+          <div class="ticket-cnt">
+            <div class="tckt-cnt1">
+              <p class="tckt-value">
+                ONLY <p class="tckt-value-dollar"><strong>35$</strong></p>​
+              </p>
+              <p class="tckt-validity">
+                Valid till June
+              </p>
+            </div>
+            <div class="tckt-cnt2">
+              <p class="tckt-cnt-title">
+                $35 Spay/Neuter<br> for Cats and Kittens!
+              </p>
+              <p class="tckt-cnt-description">
+                To help fight feline overpopulation, we are offering to spay or neuter your cat or kitten for only $35.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="event-box">
+          <div class="event-title-box">
+            <div class="event-title-img">
+              <img src="./images/start-18.png" alt="star-img">  
+            </div>
+            <h2 class="event-title">
+              Events</h2>
+          </div>          
+          <div class="spcl-adoption-day">
+            <h5 class="spcl-adoption-day-title">
+              Special Adoption Day at Golden Gate Park - 1/11/35, 1pm​
+            </h5>
+            <p class="spl-cnt">
+              I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+            </p>
+          </div>
+          <div class="national-adoption-day">
+            <h5 class="national-adoption-day-title">
+              National Adoption Event at Fisherman's Wharf - 12/12/35, 11am
+            </h5>
+            <p class="national-adoption-cnt">
+              I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <footer class="footer">
       <div class="copyright">© 2035 by Animal Shelter.<br> Powered and secured by <a href="https://www.wix.com/?utm_campaign=vir_created_with" class="footer-link" target="_blank">wix</a>
