animation added to save pet container

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
     </nav>
     <section class="save-pet-section">
       <div class="pet-image-container">
-        <img src="./images/sec-cat1.webp" alt="cat-image" class="cat-img">
+        <div class="wrapper-container">
+          <img src="./images/sec-cat1.webp" alt="cat-image" class="cat-img">
+          <img src="./images/cat-dog.webp" alt="cat-dog-image" class="cat-dog">
+        </div>
       </div>
       <div class="donate-container">
         <div class="dotted-brd"></div>
@@ -148,12 +151,17 @@
       </div>
       <div class="volunteer-box2">
         <div class="img-box1">
-          <div class="img-slider-container">
-            <div class="dog-img-box1">
-              <img src="./images/dog-pscroll1.png" alt="dog1" class="dog-img-1">
-            </div>
-            <div class="dog-img-box1">
-              <img src="./images/dog-pscroll2.png" alt="dog2" class="dog-img-2">
+          <div class="slider-conatiner">
+            <div class="img-wrapper-container">
+              <div class="dog-img-box1">
+                <img src="./images/dog-pscroll1.png" alt="dog1" class="dog-img-1">
+              </div>
+              <div class="dog-img-box1">
+                <img src="./images/dog-pscroll2.png" alt="dog2" class="dog-img-2">
+              </div>
+              <div class="dog-img-box1">
+                <img src="./images/dog_of_week.webp" alt="dog2" class="dog-img-2">
+              </div>
             </div>
           </div>
           <h3 class="adoptable-pet">
@@ -164,12 +172,17 @@
           </h3>
         </div>
         <div class="img-box2">
-          <div class="img-slider-container">
-            <div class="dog-img-box1">
-              <img src="./images/cat-pscroll-1.png" alt="cat1" class="dog-img-1">
-            </div>
-            <div class="dog-img-box1">
-              <img src="./images/cat-pscroll2.png" alt="cat2" class="cat-img-2">
+          <div class="slider-conatiner">
+            <div class="img-wrapper-container">
+              <div class="dog-img-box1">
+                <img src="./images/cat-pscroll-1.png" alt="cat1" class="cat-img-1">
+              </div>
+              <div class="dog-img-box1">
+                <img src="./images/cat-pscroll2.png" alt="cat2" class="cat-img-2">
+              </div>
+              <div class="dog-img-box1">
+                <img src="./images/cat-pscroll-3.png" alt="cat3" class="cat-img-3">
+              </div>
             </div>
           </div>
           <h3 class="adoptable-pet">
